--- a/server/tests/drivers/ec2/fixtures/test_0004_must_allow_to_retrieve_single_image.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0004_must_allow_to_retrieve_single_image.yml
@@ -1,199 +1,238 @@
----
-http_interactions:
-- request:
+--- 
+recorded_with: VCR 2.2.4
+http_interactions: 
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeImages&ImageId.1=ami-aecd60c7&Signature=KLzLL4dy5UUeBWFUDbYUZ38wvyCr2jGXq++7Qdpcb2k=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeImages&ImageId.1=ami-aecd60c7&Signature=7xtiwWEIAuEU3TfSKWNtSMr8NxrkBEGMdy0t8enC/ec=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
-      - text/xml;charset=UTF-8
-      Transfer-Encoding:
+    headers: 
+      Transfer-Encoding: 
       - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:23:33 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeImagesResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>3c9e52d9-856d-4575-90e3-9b0def3aab01</requestId>\n
-        \   <imagesSet>\n        <item>\n            <imageId>ami-aecd60c7</imageId>\n
-        \           <imageLocation>amazon/amzn-ami-pv-2012.03.3.x86_64-ebs</imageLocation>\n
-        \           <imageState>available</imageState>\n            <imageOwnerId>137112412989</imageOwnerId>\n
-        \           <isPublic>true</isPublic>\n            <architecture>x86_64</architecture>\n
-        \           <imageType>machine</imageType>\n            <kernelId>aki-88aa75e1</kernelId>\n
-        \           <imageOwnerAlias>amazon</imageOwnerAlias>\n            <name>amzn-ami-pv-2012.03.3.x86_64-ebs</name>\n
-        \           <description>Amazon Linux AMI x86_64 EBS</description>\n            <rootDeviceType>ebs</rootDeviceType>\n
-        \           <rootDeviceName>/dev/sda1</rootDeviceName>\n            <blockDeviceMapping>\n
-        \               <item>\n                    <deviceName>/dev/sda1</deviceName>\n
-        \                   <ebs>\n                        <snapshotId>snap-b4f064ca</snapshotId>\n
-        \                       <volumeSize>8</volumeSize>\n                        <deleteOnTermination>true</deleteOnTermination>\n
-        \                   </ebs>\n                </item>\n            </blockDeviceMapping>\n
-        \           <virtualizationType>paravirtual</virtualizationType>\n        </item>\n
-        \   </imagesSet>\n</DescribeImagesResponse>"
+      Content-Type: 
+      - text/xml;charset=UTF-8
+      Date: 
+      - Mon, 30 Jul 2012 11:05:32 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeImagesResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>5e65215c-8871-41f3-98b9-d661472a0f75</requestId>
+            <imagesSet>
+                <item>
+                    <imageId>ami-aecd60c7</imageId>
+                    <imageLocation>amazon/amzn-ami-pv-2012.03.3.x86_64-ebs</imageLocation>
+                    <imageState>available</imageState>
+                    <imageOwnerId>137112412989</imageOwnerId>
+                    <isPublic>true</isPublic>
+                    <architecture>x86_64</architecture>
+                    <imageType>machine</imageType>
+                    <kernelId>aki-88aa75e1</kernelId>
+                    <imageOwnerAlias>amazon</imageOwnerAlias>
+                    <name>amzn-ami-pv-2012.03.3.x86_64-ebs</name>
+                    <description>Amazon Linux AMI x86_64 EBS</description>
+                    <rootDeviceType>ebs</rootDeviceType>
+                    <rootDeviceName>/dev/sda1</rootDeviceName>
+                    <blockDeviceMapping>
+                        <item>
+                            <deviceName>/dev/sda1</deviceName>
+                            <ebs>
+                                <snapshotId>snap-b4f064ca</snapshotId>
+                                <volumeSize>8</volumeSize>
+                                <deleteOnTermination>true</deleteOnTermination>
+                            </ebs>
+                        </item>
+                    </blockDeviceMapping>
+                    <virtualizationType>paravirtual</virtualizationType>
+                </item>
+            </imagesSet>
+        </DescribeImagesResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeImages&ImageId.1=ami-aecd60c7&Signature=KLzLL4dy5UUeBWFUDbYUZ38wvyCr2jGXq++7Qdpcb2k=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeImages&ImageId.1=ami-aecd60c7&Signature=7xtiwWEIAuEU3TfSKWNtSMr8NxrkBEGMdy0t8enC/ec=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
-      - text/xml;charset=UTF-8
-      Transfer-Encoding:
+    headers: 
+      Transfer-Encoding: 
       - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:23:34 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeImagesResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>666f70a4-37d7-4157-8ff7-66a1d36ef11f</requestId>\n
-        \   <imagesSet>\n        <item>\n            <imageId>ami-aecd60c7</imageId>\n
-        \           <imageLocation>amazon/amzn-ami-pv-2012.03.3.x86_64-ebs</imageLocation>\n
-        \           <imageState>available</imageState>\n            <imageOwnerId>137112412989</imageOwnerId>\n
-        \           <isPublic>true</isPublic>\n            <architecture>x86_64</architecture>\n
-        \           <imageType>machine</imageType>\n            <kernelId>aki-88aa75e1</kernelId>\n
-        \           <imageOwnerAlias>amazon</imageOwnerAlias>\n            <name>amzn-ami-pv-2012.03.3.x86_64-ebs</name>\n
-        \           <description>Amazon Linux AMI x86_64 EBS</description>\n            <rootDeviceType>ebs</rootDeviceType>\n
-        \           <rootDeviceName>/dev/sda1</rootDeviceName>\n            <blockDeviceMapping>\n
-        \               <item>\n                    <deviceName>/dev/sda1</deviceName>\n
-        \                   <ebs>\n                        <snapshotId>snap-b4f064ca</snapshotId>\n
-        \                       <volumeSize>8</volumeSize>\n                        <deleteOnTermination>true</deleteOnTermination>\n
-        \                   </ebs>\n                </item>\n            </blockDeviceMapping>\n
-        \           <virtualizationType>paravirtual</virtualizationType>\n        </item>\n
-        \   </imagesSet>\n</DescribeImagesResponse>"
+      Content-Type: 
+      - text/xml;charset=UTF-8
+      Date: 
+      - Mon, 30 Jul 2012 11:05:32 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeImagesResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>fc31fcc6-916f-40d2-9fea-5692ec975714</requestId>
+            <imagesSet>
+                <item>
+                    <imageId>ami-aecd60c7</imageId>
+                    <imageLocation>amazon/amzn-ami-pv-2012.03.3.x86_64-ebs</imageLocation>
+                    <imageState>available</imageState>
+                    <imageOwnerId>137112412989</imageOwnerId>
+                    <isPublic>true</isPublic>
+                    <architecture>x86_64</architecture>
+                    <imageType>machine</imageType>
+                    <kernelId>aki-88aa75e1</kernelId>
+                    <imageOwnerAlias>amazon</imageOwnerAlias>
+                    <name>amzn-ami-pv-2012.03.3.x86_64-ebs</name>
+                    <description>Amazon Linux AMI x86_64 EBS</description>
+                    <rootDeviceType>ebs</rootDeviceType>
+                    <rootDeviceName>/dev/sda1</rootDeviceName>
+                    <blockDeviceMapping>
+                        <item>
+                            <deviceName>/dev/sda1</deviceName>
+                            <ebs>
+                                <snapshotId>snap-b4f064ca</snapshotId>
+                                <volumeSize>8</volumeSize>
+                                <deleteOnTermination>true</deleteOnTermination>
+                            </ebs>
+                        </item>
+                    </blockDeviceMapping>
+                    <virtualizationType>paravirtual</virtualizationType>
+                </item>
+            </imagesSet>
+        </DescribeImagesResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeImages&ImageId.1=ami-aecd60c7&Signature=KLzLL4dy5UUeBWFUDbYUZ38wvyCr2jGXq++7Qdpcb2k=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeImages&ImageId.1=ami-aecd60c7&Signature=7xtiwWEIAuEU3TfSKWNtSMr8NxrkBEGMdy0t8enC/ec=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
-      - text/xml;charset=UTF-8
-      Transfer-Encoding:
+    headers: 
+      Transfer-Encoding: 
       - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:23:34 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeImagesResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>8bcad4f3-5b7a-47e2-8073-7c1a5486700c</requestId>\n
-        \   <imagesSet>\n        <item>\n            <imageId>ami-aecd60c7</imageId>\n
-        \           <imageLocation>amazon/amzn-ami-pv-2012.03.3.x86_64-ebs</imageLocation>\n
-        \           <imageState>available</imageState>\n            <imageOwnerId>137112412989</imageOwnerId>\n
-        \           <isPublic>true</isPublic>\n            <architecture>x86_64</architecture>\n
-        \           <imageType>machine</imageType>\n            <kernelId>aki-88aa75e1</kernelId>\n
-        \           <imageOwnerAlias>amazon</imageOwnerAlias>\n            <name>amzn-ami-pv-2012.03.3.x86_64-ebs</name>\n
-        \           <description>Amazon Linux AMI x86_64 EBS</description>\n            <rootDeviceType>ebs</rootDeviceType>\n
-        \           <rootDeviceName>/dev/sda1</rootDeviceName>\n            <blockDeviceMapping>\n
-        \               <item>\n                    <deviceName>/dev/sda1</deviceName>\n
-        \                   <ebs>\n                        <snapshotId>snap-b4f064ca</snapshotId>\n
-        \                       <volumeSize>8</volumeSize>\n                        <deleteOnTermination>true</deleteOnTermination>\n
-        \                   </ebs>\n                </item>\n            </blockDeviceMapping>\n
-        \           <virtualizationType>paravirtual</virtualizationType>\n        </item>\n
-        \   </imagesSet>\n</DescribeImagesResponse>"
+      Content-Type: 
+      - text/xml;charset=UTF-8
+      Date: 
+      - Mon, 30 Jul 2012 11:05:33 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeImagesResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>eb0b67d1-23ea-4d73-817e-9a1997d6700c</requestId>
+            <imagesSet>
+                <item>
+                    <imageId>ami-aecd60c7</imageId>
+                    <imageLocation>amazon/amzn-ami-pv-2012.03.3.x86_64-ebs</imageLocation>
+                    <imageState>available</imageState>
+                    <imageOwnerId>137112412989</imageOwnerId>
+                    <isPublic>true</isPublic>
+                    <architecture>x86_64</architecture>
+                    <imageType>machine</imageType>
+                    <kernelId>aki-88aa75e1</kernelId>
+                    <imageOwnerAlias>amazon</imageOwnerAlias>
+                    <name>amzn-ami-pv-2012.03.3.x86_64-ebs</name>
+                    <description>Amazon Linux AMI x86_64 EBS</description>
+                    <rootDeviceType>ebs</rootDeviceType>
+                    <rootDeviceName>/dev/sda1</rootDeviceName>
+                    <blockDeviceMapping>
+                        <item>
+                            <deviceName>/dev/sda1</deviceName>
+                            <ebs>
+                                <snapshotId>snap-b4f064ca</snapshotId>
+                                <volumeSize>8</volumeSize>
+                                <deleteOnTermination>true</deleteOnTermination>
+                            </ebs>
+                        </item>
+                    </blockDeviceMapping>
+                    <virtualizationType>paravirtual</virtualizationType>
+                </item>
+            </imagesSet>
+        </DescribeImagesResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeImages&ImageId.1=ami-aaaaaaaa&Signature=XnTroSWZuVj9NK7+nugXloczy0LL4HiuZTFssXi0X3o=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeImages&ImageId.1=ami-aaaaaaaa&Signature=HMdPYtsGfqWVjDV3CUbKTyE8CFum+ewKw5uYYsPhO+o=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 400
       message: Bad Request
-    headers:
-      Transfer-Encoding:
+    headers: 
+      Transfer-Encoding: 
       - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:23:35 GMT
-      Cneonction:
-      - close
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! '<?xml version="1.0" encoding="UTF-8"?>
-
-        <Response><Errors><Error><Code>InvalidAMIID.NotFound</Code><Message>The AMI
-        ID ''ami-aaaaaaaa'' does not exist</Message></Error></Errors><RequestID>38941f2e-7ac1-49a2-ba9c-47c749229e78</RequestID></Response>'
+      Cneonction: 
+      - close
+      Date: 
+      - Mon, 30 Jul 2012 11:05:34 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <Response><Errors><Error><Code>InvalidAMIID.NotFound</Code><Message>The AMI ID 'ami-aaaaaaaa' does not exist</Message></Error></Errors><RequestID>00b4797f-febb-43cf-9ea5-7c6836fb6446</RequestID></Response>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeImages&ImageId.1=unknown&Signature=UOe9PfwQjIeQ98xUXppbrjn7dMtgE8ADUBtyBe6rLMo=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeImages&ImageId.1=unknown&Signature=cd/Dufs0Id6k4OzWMsgkmxstPNsWiv3YtAKgr0jZSME=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 400
       message: Bad Request
-    headers:
-      Transfer-Encoding:
+    headers: 
+      Transfer-Encoding: 
       - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:23:35 GMT
-      Cneonction:
-      - close
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! '<?xml version="1.0" encoding="UTF-8"?>
-
-        <Response><Errors><Error><Code>InvalidAMIID.Malformed</Code><Message>Invalid
-        id: "unknown" (expecting "ami-...")</Message></Error></Errors><RequestID>9d705f37-8d3a-44f6-9aed-73e2c23d8863</RequestID></Response>'
+      Cneonction: 
+      - close
+      Date: 
+      - Mon, 30 Jul 2012 11:05:34 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <Response><Errors><Error><Code>InvalidAMIID.Malformed</Code><Message>Invalid id: "unknown" (expecting "ami-...")</Message></Error></Errors><RequestID>cdcb40af-9bec-4e04-b38f-848841db4f9a</RequestID></Response>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
