--- a/server/tests/drivers/ec2/fixtures/test_0004_must_allow_to_retrieve_single_key.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0004_must_allow_to_retrieve_single_key.yml
@@ -1,131 +1,143 @@
----
-http_interactions:
-- request:
+--- 
+http_interactions: 
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeKeyPairs&KeyName.1=test1&Signature=X2DSDB5Q1aZXQpXSU14UPHemqi5PDNB7ltGIuwYXg4A=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeKeyPairs&KeyName.1=test1&Signature=Joj0FkHDH1/SQw+nVTiAQgQKo+uuCmMmRWtKHXLqunI=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
+    headers: 
+      Content-Type: 
       - text/xml;charset=UTF-8
-      Transfer-Encoding:
-      - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:26:07 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeKeyPairsResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>511426f4-6a5e-4b1a-85f8-9e775d7072b8</requestId>\n
-        \   <keySet>\n        <item>\n            <keyName>test1</keyName>\n            <keyFingerprint>3d:22:8e:63:63:45:53:fa:50:3b:e7:00:09:aa:c0:7f:95:8c:2c:b5</keyFingerprint>\n
-        \       </item>\n    </keySet>\n</DescribeKeyPairsResponse>"
+      Transfer-Encoding: 
+      - chunked
+      Date: 
+      - Mon, 30 Jul 2012 11:08:04 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeKeyPairsResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>37827313-68b5-4e04-ad6f-c8df03a11b56</requestId>
+            <keySet>
+                <item>
+                    <keyName>test1</keyName>
+                    <keyFingerprint>3d:22:8e:63:63:45:53:fa:50:3b:e7:00:09:aa:c0:7f:95:8c:2c:b5</keyFingerprint>
+                </item>
+            </keySet>
+        </DescribeKeyPairsResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeKeyPairs&KeyName.1=test1&Signature=X2DSDB5Q1aZXQpXSU14UPHemqi5PDNB7ltGIuwYXg4A=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeKeyPairs&KeyName.1=test1&Signature=Joj0FkHDH1/SQw+nVTiAQgQKo+uuCmMmRWtKHXLqunI=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
+    headers: 
+      Content-Type: 
       - text/xml;charset=UTF-8
-      Transfer-Encoding:
-      - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:26:08 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeKeyPairsResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>d1e87e42-79bb-4259-be5b-023442dcbb61</requestId>\n
-        \   <keySet>\n        <item>\n            <keyName>test1</keyName>\n            <keyFingerprint>3d:22:8e:63:63:45:53:fa:50:3b:e7:00:09:aa:c0:7f:95:8c:2c:b5</keyFingerprint>\n
-        \       </item>\n    </keySet>\n</DescribeKeyPairsResponse>"
+      Transfer-Encoding: 
+      - chunked
+      Date: 
+      - Mon, 30 Jul 2012 11:08:05 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeKeyPairsResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>f68149c6-b518-4d01-934f-1b977ce1332b</requestId>
+            <keySet>
+                <item>
+                    <keyName>test1</keyName>
+                    <keyFingerprint>3d:22:8e:63:63:45:53:fa:50:3b:e7:00:09:aa:c0:7f:95:8c:2c:b5</keyFingerprint>
+                </item>
+            </keySet>
+        </DescribeKeyPairsResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeKeyPairs&KeyName.1=test1&Signature=X2DSDB5Q1aZXQpXSU14UPHemqi5PDNB7ltGIuwYXg4A=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeKeyPairs&KeyName.1=test1&Signature=Joj0FkHDH1/SQw+nVTiAQgQKo+uuCmMmRWtKHXLqunI=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
+    headers: 
+      Content-Type: 
       - text/xml;charset=UTF-8
-      Transfer-Encoding:
-      - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:26:08 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeKeyPairsResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>bd4c435e-5ced-4fad-9ba0-75bd18dbb9ab</requestId>\n
-        \   <keySet>\n        <item>\n            <keyName>test1</keyName>\n            <keyFingerprint>3d:22:8e:63:63:45:53:fa:50:3b:e7:00:09:aa:c0:7f:95:8c:2c:b5</keyFingerprint>\n
-        \       </item>\n    </keySet>\n</DescribeKeyPairsResponse>"
+      Transfer-Encoding: 
+      - chunked
+      Date: 
+      - Mon, 30 Jul 2012 11:08:05 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeKeyPairsResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>4da24b46-974f-4020-bf15-de3c232616f2</requestId>
+            <keySet>
+                <item>
+                    <keyName>test1</keyName>
+                    <keyFingerprint>3d:22:8e:63:63:45:53:fa:50:3b:e7:00:09:aa:c0:7f:95:8c:2c:b5</keyFingerprint>
+                </item>
+            </keySet>
+        </DescribeKeyPairsResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-- request:
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeKeyPairs&KeyName.1=unknown&Signature=arkcDAXicuFyUh1HA8Xdnc3dPyDR85xl5R7wo8vOf8s=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeKeyPairs&KeyName.1=unknown&Signature=I7/JtwvxhmqLFQ7CUYy4vyPQxKg6mkPNMpJ3q7vpli4=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 400
       message: Bad Request
-    headers:
-      Transfer-Encoding:
-      - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:26:09 GMT
-      Cneonction:
+    headers: 
+      Cneonction: 
       - close
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! '<?xml version="1.0" encoding="UTF-8"?>
-
-        <Response><Errors><Error><Code>InvalidKeyPair.NotFound</Code><Message>The
-        key pair ''unknown'' does not exist</Message></Error></Errors><RequestID>12b9682f-a6b2-4902-aa7c-68f5d09e7887</RequestID></Response>'
+      Transfer-Encoding: 
+      - chunked
+      Date: 
+      - Mon, 30 Jul 2012 11:08:06 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <Response><Errors><Error><Code>InvalidKeyPair.NotFound</Code><Message>The key pair 'unknown' does not exist</Message></Error></Errors><RequestID>9e5a2780-a3ca-454b-bf19-ec9784b202e8</RequestID></Response>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+recorded_with: VCR 2.2.4
