--- a/server/tests/drivers/ec2/fixtures/test_0005_must_allow_to_create_a_new_instance_if_instance_supported-10.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0005_must_allow_to_create_a_new_instance_if_instance_supported-10.yml
@@ -2,7 +2,56 @@
 http_interactions:
 - request:
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeInstances&InstanceId.1=i-8aebc4f2&Signature=ZUP5RvEqK9oMtW/M8PcWuKLViw/EiEgzPvwxPcw8Bsg=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeInstances&InstanceId.1=i-fd749186&Signature=Rg03inb0DLdzZQyCPvRURftYeu4Pld+SDhWZWObVxcU=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      User-Agent:
+      - ''
+      Accept:
+      - ! '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Server:
+      - AmazonEC2
+      Transfer-Encoding:
+      - chunked
+      Date:
+      - Mon, 30 Jul 2012 11:06:44 GMT
+    body:
+      encoding: UTF-8
+      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeInstancesResponse
+        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>b58287b2-4408-47d2-9058-74a12ac1bbc2</requestId>\n
+        \   <reservationSet>\n        <item>\n            <reservationId>r-882d9cec</reservationId>\n
+        \           <ownerId>293787749884</ownerId>\n            <groupSet>\n                <item>\n
+        \                   <groupId>default</groupId>\n                </item>\n
+        \           </groupSet>\n            <instancesSet>\n                <item>\n
+        \                   <instanceId>i-fd749186</instanceId>\n                    <imageId>ami-aecd60c7</imageId>\n
+        \                   <instanceState>\n                        <code>0</code>\n
+        \                       <name>pending</name>\n                    </instanceState>\n
+        \                   <privateDnsName/>\n                    <dnsName/>\n                    <reason/>\n
+        \                   <keyName>test1</keyName>\n                    <amiLaunchIndex>0</amiLaunchIndex>\n
+        \                   <productCodes/>\n                    <instanceType>t1.micro</instanceType>\n
+        \                   <launchTime>2012-07-30T11:06:44.000Z</launchTime>\n                    <placement>\n
+        \                       <availabilityZone>us-east-1a</availabilityZone>\n
+        \                       <groupName/>\n                    </placement>\n                    <kernelId>aki-88aa75e1</kernelId>\n
+        \                   <monitoring>\n                        <state>disabled</state>\n
+        \                   </monitoring>\n                    <architecture>x86_64</architecture>\n
+        \                   <rootDeviceType>ebs</rootDeviceType>\n                    <rootDeviceName>/dev/sda1</rootDeviceName>\n
+        \                   <blockDeviceMapping/>\n                    <virtualizationType>paravirtual</virtualizationType>\n
+        \                   <clientToken/>\n                </item>\n            </instancesSet>\n
+        \       </item>\n    </reservationSet>\n</DescribeInstancesResponse>"
+    http_version: 
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+- request:
+    method: get
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeInstances&InstanceId.1=i-2570955e&Signature=nmsD4nelZt1ddVHrSPKuJRoUrbcKRFLQaPd9YAFep60=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
     body:
       encoding: US-ASCII
       string: ''
@@ -21,24 +70,24 @@ http_interactions:
       Transfer-Encoding:
       - chunked
       Date:
-      - Mon, 23 Jul 2012 12:24:34 GMT
+      - Mon, 30 Jul 2012 11:10:10 GMT
       Server:
       - AmazonEC2
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeInstancesResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>96ec1ae0-0777-465a-896c-014bc56ee037</requestId>\n
-        \   <reservationSet>\n        <item>\n            <reservationId>r-627ab106</reservationId>\n
+        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>ba2c26e2-c4a0-4460-80d4-d50fcdcc59a1</requestId>\n
+        \   <reservationSet>\n        <item>\n            <reservationId>r-8a2e9fee</reservationId>\n
         \           <ownerId>293787749884</ownerId>\n            <groupSet>\n                <item>\n
         \                   <groupId>default</groupId>\n                </item>\n
         \           </groupSet>\n            <instancesSet>\n                <item>\n
-        \                   <instanceId>i-8aebc4f2</instanceId>\n                    <imageId>ami-aecd60c7</imageId>\n
+        \                   <instanceId>i-2570955e</instanceId>\n                    <imageId>ami-aecd60c7</imageId>\n
         \                   <instanceState>\n                        <code>0</code>\n
         \                       <name>pending</name>\n                    </instanceState>\n
         \                   <privateDnsName/>\n                    <dnsName/>\n                    <reason/>\n
         \                   <keyName>test1</keyName>\n                    <amiLaunchIndex>0</amiLaunchIndex>\n
         \                   <productCodes/>\n                    <instanceType>t1.micro</instanceType>\n
-        \                   <launchTime>2012-07-23T12:24:34.000Z</launchTime>\n                    <placement>\n
+        \                   <launchTime>2012-07-30T11:10:09.000Z</launchTime>\n                    <placement>\n
         \                       <availabilityZone>us-east-1a</availabilityZone>\n
         \                       <groupName/>\n                    </placement>\n                    <kernelId>aki-88aa75e1</kernelId>\n
         \                   <monitoring>\n                        <state>disabled</state>\n
@@ -48,5 +97,5 @@ http_interactions:
         \                   <clientToken/>\n                </item>\n            </instancesSet>\n
         \       </item>\n    </reservationSet>\n</DescribeInstancesResponse>"
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+recorded_with: VCR 2.2.4
