--- a/server/tests/drivers/ec2/fixtures/test_0006_must_allow_to_create_multiple_instances_using_the_instance_count_parameter-i-1175906a-stopped-10.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0006_must_allow_to_create_multiple_instances_using_the_instance_count_parameter-i-1175906a-stopped-10.yml
@@ -2,7 +2,7 @@
 http_interactions: 
 - request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeInstances&InstanceId.1=i-7177920a&Signature=DHxm7p2CMHn5fzkybhIzC977iJ/i59rnLEIXVWdrTVE=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeInstances&InstanceId.1=i-1175906a&Signature=/0lQtQjHSNG89u6EI+HtMwray5kfpEvmhKJesTiRXnU=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
     body: 
       string: ""
     headers: 
@@ -22,15 +22,15 @@ http_interactions:
       Transfer-Encoding: 
       - chunked
       Date: 
-      - Mon, 30 Jul 2012 11:07:51 GMT
+      - Mon, 30 Jul 2012 11:06:30 GMT
     body: 
       string: |-
         <?xml version="1.0" encoding="UTF-8"?>
         <DescribeInstancesResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
-            <requestId>98f9d892-c605-4f89-b06f-5ff2841a3964</requestId>
+            <requestId>ecdca1a7-875b-4f1e-8e7f-fffeac8bd8e0</requestId>
             <reservationSet>
                 <item>
-                    <reservationId>r-362c9d52</reservationId>
+                    <reservationId>r-6a2d9c0e</reservationId>
                     <ownerId>293787749884</ownerId>
                     <groupSet>
                         <item>
@@ -39,19 +39,19 @@ http_interactions:
                     </groupSet>
                     <instancesSet>
                         <item>
-                            <instanceId>i-7177920a</instanceId>
+                            <instanceId>i-1175906a</instanceId>
                             <imageId>ami-aecd60c7</imageId>
                             <instanceState>
-                                <code>16</code>
-                                <name>running</name>
+                                <code>32</code>
+                                <name>shutting-down</name>
                             </instanceState>
-                            <privateDnsName>domU-12-31-39-02-75-62.compute-1.internal</privateDnsName>
-                            <dnsName>ec2-23-20-114-135.compute-1.amazonaws.com</dnsName>
-                            <reason/>
+                            <privateDnsName>domU-12-31-39-01-61-67.compute-1.internal</privateDnsName>
+                            <dnsName>ec2-23-20-103-43.compute-1.amazonaws.com</dnsName>
+                            <reason>User initiated (2012-07-30 11:06:26 GMT)</reason>
                             <amiLaunchIndex>0</amiLaunchIndex>
                             <productCodes/>
                             <instanceType>t1.micro</instanceType>
-                            <launchTime>2012-07-30T11:07:18.000Z</launchTime>
+                            <launchTime>2012-07-30T11:05:52.000Z</launchTime>
                             <placement>
                                 <availabilityZone>us-east-1a</availabilityZone>
                                 <groupName/>
@@ -60,8 +60,12 @@ http_interactions:
                             <monitoring>
                                 <state>disabled</state>
                             </monitoring>
-                            <privateIpAddress>10.248.122.144</privateIpAddress>
-                            <ipAddress>23.20.114.135</ipAddress>
+                            <privateIpAddress>10.255.102.149</privateIpAddress>
+                            <ipAddress>23.20.103.43</ipAddress>
+                            <stateReason>
+                                <code>Client.UserInitiatedShutdown</code>
+                                <message>Client.UserInitiatedShutdown: User initiated shutdown</message>
+                            </stateReason>
                             <architecture>x86_64</architecture>
                             <rootDeviceType>ebs</rootDeviceType>
                             <rootDeviceName>/dev/sda1</rootDeviceName>
@@ -69,9 +73,9 @@ http_interactions:
                                 <item>
                                     <deviceName>/dev/sda1</deviceName>
                                     <ebs>
-                                        <volumeId>vol-ba6f60db</volumeId>
+                                        <volumeId>vol-aa505fcb</volumeId>
                                         <status>attached</status>
-                                        <attachTime>2012-07-30T11:07:42.000Z</attachTime>
+                                        <attachTime>2012-07-30T11:06:15.000Z</attachTime>
                                         <deleteOnTermination>true</deleteOnTermination>
                                     </ebs>
                                 </item>
