--- a/server/tests/drivers/ec2/fixtures/test_0007_must_allow_to_reboot_instance_in_running_state-8.yml
+++ b/server/tests/drivers/ec2/fixtures/test_0007_must_allow_to_reboot_instance_in_running_state-8.yml
@@ -1,60 +1,88 @@
----
-http_interactions:
-- request:
+--- 
+http_interactions: 
+- request: 
     method: get
-    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAIZ63KHGXIWDMBY6Q&Action=DescribeInstances&InstanceId.1=i-d8eac5a0&Signature=aY73r5YiXQgu3drzlk3iAYsf0ZqguttvPU4z3OILa5U=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-23T12:21:00.000Z&Version=2010-08-31
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - ''
-  response:
-    status:
+    uri: https://ec2.us-east-1.amazonaws.com/?AWSAccessKeyId=AKIAJYOQYLLOIWN5LQ3A&Action=DescribeInstances&InstanceId.1=i-7177920a&Signature=DHxm7p2CMHn5fzkybhIzC977iJ/i59rnLEIXVWdrTVE=&SignatureMethod=HmacSHA256&SignatureVersion=2&Timestamp=2012-07-30T11:05:00.000Z&Version=2010-08-31
+    body: 
+      string: ""
+    headers: 
+      User-Agent: 
+      - ""
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Content-Type:
+    headers: 
+      Content-Type: 
       - text/xml;charset=UTF-8
-      Transfer-Encoding:
-      - chunked
-      Date:
-      - Mon, 23 Jul 2012 12:25:32 GMT
-      Server:
+      Server: 
       - AmazonEC2
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<DescribeInstancesResponse
-        xmlns=\"http://ec2.amazonaws.com/doc/2010-08-31/\">\n    <requestId>09773049-a276-4bbf-97ae-3de792b75a2d</requestId>\n
-        \   <reservationSet>\n        <item>\n            <reservationId>r-ec7ab188</reservationId>\n
-        \           <ownerId>293787749884</ownerId>\n            <groupSet>\n                <item>\n
-        \                   <groupId>default</groupId>\n                </item>\n
-        \           </groupSet>\n            <instancesSet>\n                <item>\n
-        \                   <instanceId>i-d8eac5a0</instanceId>\n                    <imageId>ami-aecd60c7</imageId>\n
-        \                   <instanceState>\n                        <code>0</code>\n
-        \                       <name>pending</name>\n                    </instanceState>\n
-        \                   <privateDnsName>domU-12-31-39-0A-08-B4.compute-1.internal</privateDnsName>\n
-        \                   <dnsName>ec2-184-73-42-198.compute-1.amazonaws.com</dnsName>\n
-        \                   <reason/>\n                    <amiLaunchIndex>0</amiLaunchIndex>\n
-        \                   <productCodes/>\n                    <instanceType>t1.micro</instanceType>\n
-        \                   <launchTime>2012-07-23T12:25:10.000Z</launchTime>\n                    <placement>\n
-        \                       <availabilityZone>us-east-1a</availabilityZone>\n
-        \                       <groupName/>\n                    </placement>\n                    <kernelId>aki-88aa75e1</kernelId>\n
-        \                   <monitoring>\n                        <state>disabled</state>\n
-        \                   </monitoring>\n                    <privateIpAddress>10.211.11.66</privateIpAddress>\n
-        \                   <ipAddress>184.73.42.198</ipAddress>\n                    <architecture>x86_64</architecture>\n
-        \                   <rootDeviceType>ebs</rootDeviceType>\n                    <rootDeviceName>/dev/sda1</rootDeviceName>\n
-        \                   <blockDeviceMapping>\n                        <item>\n
-        \                           <deviceName>/dev/sda1</deviceName>\n                            <ebs>\n
-        \                               <volumeId>vol-d4d78cb5</volumeId>\n                                <status>attaching</status>\n
-        \                               <attachTime>2012-07-23T12:25:16.000Z</attachTime>\n
-        \                               <deleteOnTermination>true</deleteOnTermination>\n
-        \                           </ebs>\n                        </item>\n                    </blockDeviceMapping>\n
-        \                   <virtualizationType>paravirtual</virtualizationType>\n
-        \                   <clientToken/>\n                </item>\n            </instancesSet>\n
-        \       </item>\n    </reservationSet>\n</DescribeInstancesResponse>"
+      Transfer-Encoding: 
+      - chunked
+      Date: 
+      - Mon, 30 Jul 2012 11:07:40 GMT
+    body: 
+      string: |-
+        <?xml version="1.0" encoding="UTF-8"?>
+        <DescribeInstancesResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+            <requestId>979b5d58-f354-45c4-9d83-24eedc45d653</requestId>
+            <reservationSet>
+                <item>
+                    <reservationId>r-362c9d52</reservationId>
+                    <ownerId>293787749884</ownerId>
+                    <groupSet>
+                        <item>
+                            <groupId>default</groupId>
+                        </item>
+                    </groupSet>
+                    <instancesSet>
+                        <item>
+                            <instanceId>i-7177920a</instanceId>
+                            <imageId>ami-aecd60c7</imageId>
+                            <instanceState>
+                                <code>0</code>
+                                <name>pending</name>
+                            </instanceState>
+                            <privateDnsName>domU-12-31-39-02-75-62.compute-1.internal</privateDnsName>
+                            <dnsName>ec2-23-20-114-135.compute-1.amazonaws.com</dnsName>
+                            <reason/>
+                            <amiLaunchIndex>0</amiLaunchIndex>
+                            <productCodes/>
+                            <instanceType>t1.micro</instanceType>
+                            <launchTime>2012-07-30T11:07:18.000Z</launchTime>
+                            <placement>
+                                <availabilityZone>us-east-1a</availabilityZone>
+                                <groupName/>
+                            </placement>
+                            <kernelId>aki-88aa75e1</kernelId>
+                            <monitoring>
+                                <state>disabled</state>
+                            </monitoring>
+                            <privateIpAddress>10.248.122.144</privateIpAddress>
+                            <ipAddress>23.20.114.135</ipAddress>
+                            <architecture>x86_64</architecture>
+                            <rootDeviceType>ebs</rootDeviceType>
+                            <rootDeviceName>/dev/sda1</rootDeviceName>
+                            <blockDeviceMapping>
+                                <item>
+                                    <deviceName>/dev/sda1</deviceName>
+                                    <ebs>
+                                        <volumeId>vol-ba6f60db</volumeId>
+                                        <status>attaching</status>
+                                        <attachTime>2012-07-30T11:07:24.000Z</attachTime>
+                                        <deleteOnTermination>true</deleteOnTermination>
+                                    </ebs>
+                                </item>
+                            </blockDeviceMapping>
+                            <virtualizationType>paravirtual</virtualizationType>
+                            <clientToken/>
+                        </item>
+                    </instancesSet>
+                </item>
+            </reservationSet>
+        </DescribeInstancesResponse>
     http_version: 
-  recorded_at: Mon, 23 Jul 2012 12:21:00 GMT
-recorded_with: VCR 2.1.1
+  recorded_at: Mon, 30 Jul 2012 11:05:00 GMT
+recorded_with: VCR 2.2.4
